Make page banner screen darker to ensure sufficient contrast

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -217,6 +217,7 @@ $kbd-padding-x:                     .64rem;
 }
 
 .bg-black-50  { background-color: rgba(  0,   0,   0, .5); }
+.bg-black-65  { background-color: rgba(  0,   0,   0, .65); }
 .bg-white-50  { background-color: rgba(255, 255, 255, .5); }
 .bg-red-80    { background-color: rgba(194,   4,  48, .8); }
 .bg-yellow-80 { background-color: rgba(255, 199,  42, .8); }
